@@ -14,6 +14,9 @@ NEW FEATURES:
  * Added character 'dirname' to sysinfo() specifying the basename of the
    current working directory.
 
+ * startup::check(fix = TRUE) now returns the pathnames of any files that
+   needed to be fixed and was successfully updated.
+
  * Added toolbox() for organizing "toolbox" environments on the search path
    where you can put your custom tools (functions and other objects). Tools
    in a toolbox are protected from what is going on in the global environment,
